k8s/deployment-octokit-scanner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octokit-scanner
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: octokit-scanner
  template:
    metadata:
      labels:
        app: octokit-scanner
    spec:
      containers:
        - name: octokit-scanner
          image: vader404/ruok-octokit-scanner:0.0.1
          # image: localhost/ruok-octokit-scanner:0.0.1
