k8s/deployment-ruok-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: graphql-api
  name: graphql-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphql-api
  strategy: {}
  template:
    metadata:
      labels:
        app: graphql-api
    spec:
      containers:
      - name: graphql-api
        imagePullPolicy: Never
        image: localhost/ruok-api:0.0.1
        securityContext:
          allowPrivilegeEscalation: false
        ports:
          - containerPort: 4000
        resources:
          limits:
            cpu: 300m
            memory: 70Mi
          requests:
            cpu: 300m
            memory: 70Mi
