k8s/svc-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-server
spec:
  selector:
    app: ui-server
  ports:
    - port: 8080
