k8s/v-svc-ruok-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: v-svc-ruok-ui
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
  - name: ruok-ui
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ruok-ui
        port:
          number: 8080
